# meshcore-cli

./: .gitignore  LICENSE  README.md  flake.nix  mc-cli.py  mccli.py  mccli_tcp.py  pyproject.toml
mclib/: __init__.py  mclib.py
meshcore/: __init__.py  mclib.py
src/meshcore_cli/: __main__.py  meshcore_cli.py
